--- a/TP1/tp1_gp8_app/pubspec.yaml
+++ b/TP1/tp1_gp8_app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: tp1_profile_card_app
+name: tp1_gp8_app
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
