--- a/TP2/tp2_gp8_app/pubspec.yaml
+++ b/TP2/tp2_gp8_app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: tp2_appli_meteo
+name: tp2_gp8_app
 description: TP2 de HAI912I.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
